--- a/crates/zxrag/Cargo.toml
+++ b/crates/zxrag/Cargo.toml
@@ -6,6 +6,8 @@ edition.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+zxrag-core = { workspace = true }
+zxrag-backend = { workspace = true }
 anyhow = { workspace = true }
 candle-core = { workspace = true }
 candle-examples = { workspace = true }
@@ -17,3 +19,4 @@ tracing-subscriber = { workspace = true }
 tracing-chrome = { workspace = true }
 hf-hub = { workspace = true }
 serde_json = { workspace = true }
+serde = { workspace = true }
