--- a/crates/zxrag-backend/Cargo.toml
+++ b/crates/zxrag-backend/Cargo.toml
@@ -9,6 +9,9 @@ edition.workspace = true
 zxrag-core = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
+tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
 time = { workspace = true }
+serde = { workspace = true }
+config = { workspace = true }
