--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ tracing-subscriber = { version = "0.3.18", features = [
 tracing-appender = "0.2.3"
 tracing-chrome = "0.7.1"
 time = { version = "0.3.34", features = ["local-offset"] }
+strum = { version = "0.26.1", features = ["derive"] }
