--- a/crates/zxrag-core/Cargo.toml
+++ b/crates/zxrag-core/Cargo.toml
@@ -9,3 +9,8 @@ edition.workspace = true
 serde = { workspace = true }
 config = { workspace = true }
 anyhow = { workspace = true }
+strum = { workspace = true }
+candle-core = { workspace = true }
+candle-transformers = { workspace = true }
+candle-examples = { workspace = true }
+tokenizers = { workspace = true }
