--- a/zxrag-ui/package.json
+++ b/zxrag-ui/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.21.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "0.5.10",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
