--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,18 @@ tracing-appender = "0.2.3"
 tracing-chrome = "0.7.1"
 time = { version = "0.3.34", features = ["local-offset"] }
 strum = { version = "0.26.1", features = ["derive"] }
+axum = { version = "0.7.4", features = ["tracing"] }
+axum-extra = { version = "0.9.2", features = ["cookie"] }
+rust-embed = { version = "8.3.0", features = ["compression"] }
+tower-http = { version = "0.5.2", features = [
+  "fs",
+  "limit",
+  "trace",
+  "auth",
+  "catch-panic",
+] }
+mime_guess = "2.0.4"
+hex = "0.4.3"
+either = { version = "1.10.0", features = ["serde"] }
+derive_more = "0.99.17"
+futures = "0.3.29"
