--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,6 @@ hex = "0.4.3"
 either = { version = "1.10.0", features = ["serde"] }
 derive_more = "0.99.17"
 futures = "0.3.30"
+uuid = { version = "1.7.0", features = ["v4"] }
+tinyvec = { version = "1.6.0", features = ["serde"] }
+pin-project = "1.1.4"
