--- a/crates/zxrag-core/Cargo.toml
+++ b/crates/zxrag-core/Cargo.toml
@@ -15,3 +15,5 @@ candle-transformers = { workspace = true }
 candle-examples = { workspace = true }
 tokenizers = { workspace = true }
 tracing = { workspace = true }
+futures = { workspace = true }
+pin-project = { workspace = true }
