--- a/crates/zxrag-core/Cargo.toml
+++ b/crates/zxrag-core/Cargo.toml
@@ -13,7 +13,21 @@ strum = { workspace = true }
 candle-core = { workspace = true }
 candle-transformers = { workspace = true }
 candle-examples = { workspace = true }
+candle-nn = { workspace = true }
 tokenizers = { workspace = true }
 tracing = { workspace = true }
 futures = { workspace = true }
 pin-project = { workspace = true }
+
+[build-dependencies]
+anyhow = { workspace = true }
+bindgen_cuda = { workspace = true, optional = true }
+
+[features]
+default = []
+cuda = [
+  "candle-core/cuda",
+  "candle-nn/cuda",
+  "candle-transformers/cuda",
+  "dep:bindgen_cuda",
+]
