--- a/crates/zxrag/Cargo.toml
+++ b/crates/zxrag/Cargo.toml
@@ -14,3 +14,7 @@ time = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
+
+[features]
+default = []
+cuda = ["zxrag-core/cuda"]
