--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ tower-http = { version = "0.5.2", features = [
   "trace",
   "auth",
   "catch-panic",
+  "cors",
 ] }
 mime_guess = "2.0.4"
 hex = "0.4.3"
