--- a/zxrag-ui/package.json
+++ b/zxrag-ui/package.json
@@ -10,22 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "openai": "^4.28.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.21.1",
+    "react-router-dom": "6.22.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.11.24",
-    "@types/react": "18.2.61",
-    "@types/react-dom": "18.2.19",
+    "@types/react": "18.2.63",
+    "@types/react-dom": "18.2.20",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.18",
     "daisyui": "4.7.2",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
-    "vite": "5.1.4"
+    "vite": "5.1.5"
   }
 }
