--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ zxrag = { path = "./crates/zxrag", version = "0.1.0" }
 zxrag-backend = { path = "./crates/zxrag-backend", version = "0.1.0" }
 zxrag-core = { path = "./crates/zxrag-core", version = "0.1.0" }
 anyhow = "1.0.80"
-candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
-candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
-candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
-candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
+candle-core = "0.4.1"
+candle-examples = "0.4.1"
+candle-nn = "0.4.1"
+candle-transformers = "0.4.1"
 clap = { version = "4.5.1", features = ["derive"] }
 tokenizers = { version = "0.15.2", default-features = false }
 hf-hub = "0.3.2"
