--- a/zxrag-ui/biome.json
+++ b/zxrag-ui/biome.json
@@ -1,12 +1,21 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true
-		}
-	}
+  "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
+  "files": {
+    "include": [
+      "zxrag-ui/**/*"
+    ],
+    "ignore": [
+      ".vscode",
+      "zxrag-ui/src/components/ui/**/*"
+    ]
+  },
+  "organizeImports": {
+    "enabled": true
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true
+    }
+  }
 }
