--- a/biome.json
+++ b/biome.json
@@ -2,6 +2,6 @@
 	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
 	"files": {
 		"include": ["./zxrag-ui/**/*"],
-		"ignore": []
+		"ignore": ["./zxrag-ui/src/components/ui/**/*"]
 	}
 }
