--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,13 @@ candle-core = "0.4.1"
 candle-examples = "0.4.1"
 candle-nn = "0.4.1"
 candle-transformers = "0.4.1"
-clap = { version = "4.5.1", features = ["derive"] }
+clap = { version = "4.5.2", features = ["derive"] }
 tokenizers = { version = "0.15.2", default-features = false }
 hf-hub = "0.3.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
+tokio-stream = "0.1.14"
 config = "0.14.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = [
