--- a/crates/zxrag-backend/Cargo.toml
+++ b/crates/zxrag-backend/Cargo.toml
@@ -8,6 +8,7 @@ edition.workspace = true
 [dependencies]
 zxrag-core = { workspace = true }
 tokio = { workspace = true }
+tokio-stream = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
