--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,4 @@ uuid = { version = "1.7.0", features = ["v4"] }
 tinyvec = { version = "1.6.0", features = ["serde"] }
 pin-project = "1.1.5"
 bindgen_cuda = "0.1.4"
+vectordb = "0.4.10"
