--- a/crates/zxrag-core/Cargo.toml
+++ b/crates/zxrag-core/Cargo.toml
@@ -17,7 +17,7 @@ candle-nn = { workspace = true }
 tokenizers = { workspace = true }
 tracing = { workspace = true }
 futures = { workspace = true }
-pin-project = { workspace = true }
+dyn-clone = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
