--- a/crates/zxrag/Cargo.toml
+++ b/crates/zxrag/Cargo.toml
@@ -14,6 +14,7 @@ time = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
+dyn-clone = { workspace = true }
 
 [features]
 default = []
