--- a/crates/zxrag-core/Cargo.toml
+++ b/crates/zxrag-core/Cargo.toml
@@ -18,6 +18,7 @@ tokenizers = { workspace = true }
 tracing = { workspace = true }
 futures = { workspace = true }
 dyn-clone = { workspace = true }
+serde_json = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
