--- a/crates/zxrag/Cargo.toml
+++ b/crates/zxrag/Cargo.toml
@@ -15,6 +15,11 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
 dyn-clone = { workspace = true }
+vectordb = { workspace = true }
+tokio = { workspace = true }
+arrow-schema = { workspace = true }
+arrow-array = { workspace = true }
+futures = { workspace = true }
 
 [features]
 default = []
