--- a/crates/zxrag-backend/Cargo.toml
+++ b/crates/zxrag-backend/Cargo.toml
@@ -31,3 +31,4 @@ vectordb = { workspace = true }
 arrow-schema = { workspace = true }
 arrow-array = { workspace = true }
 redb = { workspace = true }
+opendal = { workspace = true }
