--- a/zxrag-ui/package.json
+++ b/zxrag-ui/package.json
@@ -39,21 +39,23 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "8.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.5.0",
     "embla-carousel-react": "^8.0.0",
-    "i18next": "23.10.0",
-    "lucide-react": "0.350.0",
-    "next-themes": "^0.2.1",
-    "openai": "^4.28.4",
+    "i18next": "23.10.1",
+    "input-otp": "^1.2.0",
+    "lucide-react": "0.358.0",
+    "next-themes": "^0.3.0",
+    "openai": "4.29.1",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-i18next": "14.1.0",
-    "react-resizable-panels": "^2.0.12",
+    "react-resizable-panels": "^2.0.13",
     "react-router-dom": "6.22.3",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
@@ -62,14 +64,14 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.25",
-    "@types/react": "18.2.64",
-    "@types/react-dom": "18.2.21",
+    "@types/node": "^20.11.28",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.18",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2",
-    "vite": "5.1.5"
+    "vite": "5.1.6"
   }
 }
