--- a/crates/zxrag-backend/Cargo.toml
+++ b/crates/zxrag-backend/Cargo.toml
@@ -32,3 +32,5 @@ arrow-schema = { workspace = true }
 arrow-array = { workspace = true }
 redb = { workspace = true }
 opendal = { workspace = true }
+sqlx = { workspace = true }
+chrono = { workspace = true }
