--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,6 @@ arrow-schema = "50.0.0"
 arrow-array = "50.0.0"
 redb = "1.5.0"
 opendal = "0.45.1"
+sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
+serde_with = { version = "3.6.1", features = ["chrono_0_4"] }
+chrono = { version = "0.4.34", features = ["serde"] }
