--- a/crates/zxrag-core/Cargo.toml
+++ b/crates/zxrag-core/Cargo.toml
@@ -19,8 +19,14 @@ tracing = { workspace = true }
 futures = { workspace = true }
 dyn-clone = { workspace = true }
 serde_json = { workspace = true }
+serde_with = { workspace = true }
 arrow-schema = { workspace = true }
 arrow-array = { workspace = true }
+sqlx = { workspace = true }
+either = { workspace = true }
+derive_more = { workspace = true }
+tinyvec = { workspace = true }
+chrono = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
