--- a/zxrag-ui/package.json
+++ b/zxrag-ui/package.json
@@ -43,35 +43,35 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.5.0",
-    "embla-carousel-react": "^8.0.0",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.0.2",
     "i18next": "23.10.1",
-    "input-otp": "^1.2.0",
-    "lucide-react": "0.358.0",
+    "input-otp": "^1.2.4",
+    "lucide-react": "0.368.0",
     "next-themes": "^0.3.0",
-    "openai": "4.29.1",
+    "openai": "4.33.1",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.0",
+    "react-hook-form": "^7.51.3",
     "react-i18next": "14.1.0",
-    "react-resizable-panels": "^2.0.13",
+    "react-resizable-panels": "^2.0.16",
     "react-router-dom": "6.22.3",
-    "sonner": "^1.4.3",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.28",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.78",
+    "@types/react-dom": "18.2.25",
     "@vitejs/plugin-react": "4.2.1",
-    "autoprefixer": "10.4.18",
-    "postcss": "8.4.35",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.4.2",
-    "vite": "5.1.6"
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5",
+    "vite": "5.2.8"
   }
 }
